<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hearthstone Card Search</string>
    <string name="welcome_text"></string>
    <string name="progress_card_found">card found</string>
    <string name="progress_cards_found">cards found</string>
    <string name="website_url">hearthstone-card-search.com</string>
    <string name="logo">logo</string>
    <string name="list_menu_cards">Show card list</string>
    <string name="list_menu_facets">Show filters</string>
    <string name="list_menu_clear">Clear search</string>
    <string name="list_menu_search">Search</string>
    <string name="list_menu_help">Help !</string>
    
    <string name="detail_menu_oracle">Text</string>
    <string name="detail_menu_pictures">Pictures</string>
    
    <string name="search_hint">black lotus, draw, sacrifice…</string>
    <string name="failed_search">Oops, search encountered an error ! Please, check your data connection.</string>
    
    <string name="card_type">Type:</string>
    <string name="card_formats">Formats:</string>
    
    <string name="drawer_open">Go to search</string>
    <string name="drawer_close">Back to list</string>
    
    <string name="toasting_loading_finished">Done !</string>
    
    <string name="facet_attack">Attack</string>
    <string name="facet_capabilities">Capabilities</string>
    <string name="facet_casting_cost">Casting Cost</string>
    <string name="facet_clazz">Class</string>
    <string name="facet_durability">Durability</string>
    <string name="facet_health">Health</string>
    <string name="facet_minion_type">Minion Type</string>
    <string name="facet_rarity">Rarity</string>
    <string name="facet_set">Set</string>
    <string name="facet_type">Type</string>
    <string name="facet_more">More filters…</string>
    
    <string name="loading_initial">searching…</string>
    <string name="loading_more">loading 30 next cards…</string>
    <string name="loading_clear">clearing…</string>
    <string name="loading_facet">filtering search…</string>
    <string name="loading_more_facet">adding filters…</string>

	<string name="mode">smartphone</string>
</resources>